# This file will contain the main JAX/Flax model definition for the Prometheus Cognitive Core.

from flax import linen as nn
import jax.numpy as jnp
from typing import Dict

# Placeholder for the actual data input type after protobuf compilation
# from ..protos import core_pb2

class MultiModalEmbeddings(nn.Module):
    """A module to create embeddings for different modalities."""
    embedding_dim: int

    @nn.compact
    def __call__(self, inputs: Dict[str, jnp.ndarray]):
        # In a real implementation, each modality would have its own embedding model.
        # For now, we'll use a simple linear projection as a placeholder.
        
        embeddings = []
        if 'text_data' in inputs:
            text_embed = nn.Dense(self.embedding_dim, name="text_embed")(inputs['text_data'])
            embeddings.append(text_embed)
        
        if 'image_data' in inputs:
            # A real vision transformer (ViT) would be used here.
            # For now, a dense layer simulates this.
            image_embed = nn.Dense(self.embedding_dim, name="image_embed")(inputs['image_data'])
            embeddings.append(image_embed)

        if 'code_data' in inputs:
            code_embed = nn.Dense(self.embedding_dim, name="code_embed")(inputs['code_data'])
            embeddings.append(code_embed)

        # Combine embeddings (e.g., by concatenation or summation)
        if not embeddings:
            raise ValueError("No valid input data provided to MultiModalEmbeddings")
            
        return jnp.sum(jnp.array(embeddings), axis=0)

class PrometheusModel(nn.Module):
    """The main Prometheus Cognitive Core model."""
    embedding_dim: int = 768
    num_heads: int = 12
    num_layers: int = 12
    
    @nn.compact
    def __call__(self, inputs: Dict[str, jnp.ndarray], training: bool):
        # 1. Get multi-modal embeddings
        x = MultiModalEmbeddings(embedding_dim=self.embedding_dim)(inputs)
        
        # 2. Add positional encodings (omitted for simplicity for now)
        
        # 3. Transformer Blocks
        for _ in range(self.num_layers):
            # A real implementation would use a Flax Transformer block here.
            # We'll simulate it with a simple self-attention + MLP block.
            attn = nn.SelfAttention(num_heads=self.num_heads)(x)
            x = x + attn
            x = nn.LayerNorm()(x)
            
            ff = nn.Dense(self.embedding_dim * 4)(x)
            ff = nn.relu(ff)
            ff = nn.Dense(self.embedding_dim)(ff)
            x = x + ff
            x = nn.LayerNorm()(x)
            
        return x
